syntax = "proto3";

package user;

option go_package = "test-grpc-project/pkg/pb";
import "pkg/proto/google/api/annotations.proto";

message User {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string created_at = 5;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserResponse{
    User user = 1;
    string message = 2;
} 

service GrpcProject {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){
        option (google.api.http) = {
            post: "/v1/create_user",
            body: "*"
        };
    }
}